# advent-of-code-2021

./: Cargo.toml  README.md
js/: d1.js  d2.js  d3.js
src/aoc2021/: lib.rs
src/aoc2021/d04/: mod.rs
src/aoc2021/d08/: mod.rs
src/aoc2021/d10/: mod.rs
src/aoc2021/d11/: mod.rs
src/aoc2021/d12/: cave.rs  mod.rs
src/aoc2021/d13/: fold.rs  mod.rs
src/aoc2021/d4/: board.rs
src/aoc2021/d5/: mod.rs
src/aoc2021/d6/: mod.rs
src/aoc2021/d7/: mod.rs
src/aoc2021/d8/: mod.rs
src/aoc2021/d9/: mod.rs
src/aoc2021/utils/: mod.rs
