[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["andrewflbarnes <andrewflbarnes@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc2021"
path = "src/aoc2021/lib.rs"

[[bin]]
name = "aoc2021"
path = "src/bin/main.rs"

[dependencies]
